only enable miner&plotter on Windows

--- a/configure.ac
+++ b/configure.ac
@@ -1211,6 +1211,9 @@ AM_CONDITIONAL([HARDEN],[test x$use_hardening = xyes])
 AM_CONDITIONAL([ENABLE_HWCRC32],[test x$enable_hwcrc32 = xyes])
 AM_CONDITIONAL([USE_ASM],[test x$use_asm = xyes])
 
+AM_CONDITIONAL([ENABLE_MINER], [test x$TARGET_OS = xwindows])
+AM_CONDITIONAL([ENABLE_PLOTTER], [test x$TARGET_OS = xwindows])
+
 AC_DEFINE(CLIENT_VERSION_MAJOR, _CLIENT_VERSION_MAJOR, [Major version])
 AC_DEFINE(CLIENT_VERSION_MINOR, _CLIENT_VERSION_MINOR, [Minor version])
 AC_DEFINE(CLIENT_VERSION_REVISION, _CLIENT_VERSION_REVISION, [Build revision])
