--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -162,7 +162,6 @@ QT_MOC_CPP = \
   qt/moc_intro.cpp \
   qt/moc_macdockiconhandler.cpp \
   qt/moc_macnotificationhandler.cpp \
-  qt/moc_minerconsole.cpp \
   qt/moc_modaloverlay.cpp \
   qt/moc_notificator.cpp \
   qt/moc_openuridialog.cpp \
@@ -171,7 +170,6 @@ QT_MOC_CPP = \
   qt/moc_overviewpage.cpp \
   qt/moc_peertablemodel.cpp \
   qt/moc_paymentserver.cpp \
-  qt/moc_plotconsole.cpp \
   qt/moc_qvalidatedlineedit.cpp \
   qt/moc_qvaluecombobox.cpp \
   qt/moc_receivecoinsdialog.cpp \
@@ -193,6 +191,14 @@ QT_MOC_CPP = \
   qt/moc_walletmodel.cpp \
   qt/moc_walletview.cpp
 
+if ENABLE_MINER
+QT_MOC_CPP += qt/moc_minerconsole.moc
+endif
+
+if ENABLE_PLOTTER
+QT_MOC_CPP += qt/moc_plotconsole.moc
+endif
+
 BITCOIN_MM = \
   qt/macdockiconhandler.mm \
   qt/macnotificationhandler.mm
@@ -202,10 +208,16 @@ QT_MOC = \
   qt/bitcoinamountfield.moc \
   qt/callback.moc \
   qt/intro.moc \
-  qt/minerconsole.moc \
   qt/overviewpage.moc \
-  qt/plotconsole.moc \
   qt/rpcconsole.moc
+
+if ENABLE_MINER
+QT_MOC += qt/minerconsole.moc
+endif
+
+if ENABLE_PLOTTER
+QT_MOC += qt/plotconsole.moc
+endif
 
 QT_QRC_CPP = qt/qrc_bitcoin.cpp
 QT_QRC = qt/bitcoin.qrc
@@ -236,7 +248,6 @@ BITCOIN_QT_H = \
   qt/intro.h \
   qt/macdockiconhandler.h \
   qt/macnotificationhandler.h \
-  qt/minerconsole.h \
   qt/modaloverlay.h \
   qt/networkstyle.h \
   qt/notificator.h \
@@ -248,7 +259,6 @@ BITCOIN_QT_H = \
   qt/paymentserver.h \
   qt/peertablemodel.h \
   qt/platformstyle.h \
-  qt/plotconsole.h \
   qt/qvalidatedlineedit.h \
   qt/qvaluecombobox.h \
   qt/receivecoinsdialog.h \
@@ -272,6 +282,14 @@ BITCOIN_QT_H = \
   qt/walletmodeltransaction.h \
   qt/walletview.h \
   qt/winshutdownmonitor.h
+
+if ENABLE_MINER
+BITCOIN_QT_H += qt/minerconsole.h
+endif
+
+if ENABLE_PLOTTER
+BITCOIN_QT_H += qt/plotconsole.h
+endif
 
 RES_ICONS = \
   qt/res/icons/add.png \
@@ -304,7 +322,6 @@ RES_ICONS = \
   qt/res/icons/filesave.png \
   qt/res/icons/fontbigger.png \
   qt/res/icons/fontsmaller.png \
-  qt/res/icons/hd.png \
   qt/res/icons/hd_disabled.png \
   qt/res/icons/hd_enabled.png \
   qt/res/icons/history.png \
@@ -331,6 +348,10 @@ RES_ICONS = \
   qt/res/icons/warning.png \
   qt/res/icons/verify.png
 
+if ENABLE_PLOTTER
+RES_ICONS += qt/res/icons/hd_plot.png
+endif
+
 BITCOIN_QT_BASE_CPP = \
   qt/bantablemodel.cpp \
   qt/bitcoinaddressvalidator.cpp \
@@ -341,7 +362,6 @@ BITCOIN_QT_BASE_CPP = \
   qt/csvmodelwriter.cpp \
   qt/guiutil.cpp \
   qt/intro.cpp \
-  qt/minerconsole.cpp \
   qt/modaloverlay.cpp \
   qt/networkstyle.cpp \
   qt/notificator.cpp \
@@ -349,13 +369,20 @@ BITCOIN_QT_BASE_CPP = \
   qt/optionsmodel.cpp \
   qt/peertablemodel.cpp \
   qt/platformstyle.cpp \
-  qt/plotconsole.cpp \
   qt/qvalidatedlineedit.cpp \
   qt/qvaluecombobox.cpp \
   qt/rpcconsole.cpp \
   qt/splashscreen.cpp \
   qt/trafficgraphwidget.cpp \
   qt/utilitydialog.cpp
+
+if ENABLE_MINER
+BITCOIN_QT_BASE_CPP += qt/minerconsole.cpp
+endif
+
+if ENABLE_PLOTTER
+BITCOIN_QT_BASE_CPP += qt/plotconsole.cpp
+endif
 
 BITCOIN_QT_WINDOWS_CPP = qt/winshutdownmonitor.cpp
 
