--- a/share/setup.nsi.in
+++ b/share/setup.nsi.in
@@ -50,9 +50,9 @@ Var StartMenuGroup
 # Installer attributes
 OutFile @abs_top_srcdir@/@PACKAGE_TARNAME@-${VERSION}-win@WINDOWS_BITS@-setup.exe
 !if "@WINDOWS_BITS@" == "64"
-InstallDir $PROGRAMFILES64\BCO
+InstallDir $PROGRAMFILES64\BitcoinOre
 !else
-InstallDir $PROGRAMFILES\BCO
+InstallDir $PROGRAMFILES\BitcoinOre
 !endif
 CRCCheck on
 XPStyle on
@@ -83,6 +83,9 @@ Section -Main SEC0000
     File /r @abs_top_srcdir@/doc\*.*
     SetOutPath $INSTDIR
     WriteRegStr HKCU "${REGKEY}\Components" Main 1
+    # BCO tools
+    SetOutPath $INSTDIR\tools
+    File /r @abs_top_srcdir@/src/qt/tools
 SectionEnd
 
 Section -post SEC0001
