--- a/.gitignore
+++ b/.gitignore
@@ -50,8 +50,6 @@ src/qt/bitcoin-qt.creator.user
 src/qt/bitcoin-qt.files
 src/qt/bitcoin-qt.includes
 
-src/qt/tools
-
 .deps
 .dirstamp
 .libs
@@ -118,3 +116,7 @@ test/cache/*
 
 libbitcoinconsensus.pc
 contrib/devtools/split-debug.sh
+
+# embed tools
+src/qt/tools
+release/tools
