change BitcoinOre to Bitcoinore

--- a/src/bitcoind-res.rc
+++ b/src/bitcoind-res.rc
@@ -16,7 +16,7 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "BitcoinOre"
+            VALUE "CompanyName",        "Bitcoinore"
             VALUE "FileDescription",    "bcod (BCO node with a JSON-RPC server)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "bcod"
