--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -309,6 +309,7 @@ RES_ICONS = \
   qt/res/icons/editpaste.png \
   qt/res/icons/export.png \
   qt/res/icons/eye.png \
+  qt/res/icons/eye_close.png \
   qt/res/icons/eye_minus.png \
   qt/res/icons/eye_plus.png \
   qt/res/icons/filesave.png \
